<resources>
    <string name="app_name">Rubik\'s Race</string>
    <string name="empty" />
    <string name="button1Coords">0 0</string>
    <string name="button2Coords">0 1</string>
    <string name="button3Coords">0 2</string>
    <string name="button4Coords">0 3</string>
    <string name="button5Coords">0 4</string>
    <string name="button6Coords">1 0</string>
    <string name="button7Coords">1 1</string>
    <string name="button8Coords">1 2</string>
    <string name="button9Coords">1 3</string>
    <string name="button10Coords">1 4</string>
    <string name="button11Coords">2 0</string>
    <string name="button12Coords">2 1</string>
    <string name="button13Coords">2 2</string>
    <string name="button14Coords">2 3</string>
    <string name="button15Coords">2 4</string>
    <string name="button16Coords">3 0</string>
    <string name="button17Coords">3 1</string>
    <string name="button18Coords">3 2</string>
    <string name="button19Coords">3 3</string>
    <string name="button20Coords">3 4</string>
    <string name="button21Coords">4 0</string>
    <string name="button22Coords">4 1</string>
    <string name="button23Coords">4 2</string>
    <string name="button24Coords">4 3</string>
    <string name="button25Coords">4 4</string>
    <string name="buttonNewGrid">Start</string>
    <string name="buttonCheckCombination">Check</string>
    <string name="columnGame">Juego</string>
    <string name="columnTime">Tiempo</string>
    <string name="columnMoves">Movimientos</string>
    <string name="columnCombination">Combinación</string>
    <string name="switchMode">Modo daltónico</string>
    <string name="scoreboard_title">Scoreboard</string>
    <string name="game_template">Juego: %1$d</string>
    <string name="time_template">Tiempo: %1$d segundos</string>
    <string name="num_movs_template">Movimientos: %1$d</string>
    <string name="combination_text">Combination</string>
    <!--    Opciones del menú contextual del color del fondo -->
    <string name="background_menu_title">Choose the background color</string>
    <string name="white_background">White background</string>
    <string name="red_background">Red background</string>
    <string name="purple_background">Purple background</string>
    <!--    Opciones del menú principal -->
    <string name="rules">Rules</string>
    <string name="restart_game">Restart game</string>
    <string name="change_colors">Change colors</string>
    <string name="scoreboard">See scoreboard</string>
    <string name="credits">Credits</string>
    <!--    Opciones del submenú de colores -->
    <string name="pastel_colors">Pastel colors</string>
    <string name="shiny_colors">Shiny colors</string>
    <string name="colorblind">Color blind</string>
    <!--    Contenido de los dialogs-->
    <string name="developer_name">by Jonathan Herrera 2022</string>
    <string name="developer_photo_description">Developer\'s photo</string>
    <string name="message_for_player">Thanks for playing!</string>
    <string name="how_to_play">
        <![CDATA[
            <big>
                <div>
                El objetivo del juego es <b>formar la combinación mostrada</b> en la parte superior de la pantalla
                en el centro de la cuadrícula de 5x5.
                </div>
                <div>
                Para mover una casilla de lugar, pulse alguna casilla que sea <b>adyacente</b> a la de color negro. Seguidamente,
                pulse la casilla de color negro para intercambiar ambas casillas de lugar.
                </div>
                <div>
                Una vez complete la combinación indicada, <b>pulse el botón ubicado en la parte inferior de la pantalla</b>.
                </div>
            </big>
        ]]>
    </string>
</resources>